--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,4 @@
-﻿## Unity ##
-
-*.cs diff=csharp text
+﻿*.cs diff=csharp text
 *.cginc text
 *.shader text
 
@@ -13,8 +11,6 @@
 *.asset merge=unityyamlmerge
 *.meta merge=unityyamlmerge
 *.controller merge=unityyamlmerge
-
-## git-lfs ##
 
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.jpeg filter=lfs diff=lfs merge=lfs -text
